new: step verifier lock contract
To check whether we can execute step in contract

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /target
+
+/challenge/contracts/c/build/*
+/challenge/contracts/**/target/*
+/challenge/build/*
+/challenge/target/*
+/challenge/!.gitkeep
+/challenge/.tmp/
